--- a/index.html
+++ b/index.html
@@ -2,91 +2,64 @@
 <html lang="en" dir="ltr">
 
 <head>
-
   <meta charset="utf-8">
-  <title>shaurya</title>
-
-  <style >
-    td{
-      padding-left:  10px;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="icon" typr="image/png" href="favicon.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Source+Serif+Pro&display=swap" rel="stylesheet">
+  <title>Shaurya Sood</title>
 </head>
 
 <body>
-  <img src="Untitled.png" alt="My Neft" style="width:30%;height:150px;" />
-  <h1>Shaurya sood</h1>
-  <p><em>Studing in ADGITM</em></p>
-  <p>
-    My name is <strong>Shaurya Sood</strong>.I use java for development purposes, i like to sing
-  </p>
-  <hr size="3" noshade / >
-  <h3>Education</h3>
-  <ul style="list-style-type:circle">
-    <li>12<sup>TH</sup> for DL DAV Pitampura</li>
-    <li>Collage from <strong>ADGITM</strong></li>
-  </ul>
-  <hr />
-  <h3>Hobbies</h3>
-  <ol type="I" start="5">
-    <li><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/learn/lecture/12287450#overview" target="_blank">Coding</a></li>
-    <li>Singing</li>
-    <li>Gym</li>
-  </ol>
-  <hr />
-  <h3>Work experience</h3>
-  <table>
-    <thead>
-      <tr>
-        <th>Year</th>
-        <th>Job</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2007-2021</td>
-        <td>Schooling</td>
-      </tr>
-      <tr>
-        <td>2021-2025</td>
-        <td>Collage</td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <tr>
-        <td>fname sood</td>
-      </tr>
-    </tfoot>
-  </table>
-  <hr />
+  <div class="top-container">
+    <img src="cloud.png" alt="cloud" class="pos1">
+    <h1 style="font-family: 'Dancing Script', cursive;">I'am Shaurya</h1>
+    <h2 style="font-family: 'Source Serif Pro', serif;">a web designer</h2>
 
-  <h3>Skills</h3>
+    <img src="mountain.png" alt="random" style="width:60%;height:500px;">
+    <img src="cloud.png" alt="cloud" class="pos2">
+  </div>
 
-  <table>
-    <tr>
-      <td>Java : </td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Html : </td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>JavaScript : </td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Css : </td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-  </table>
+  <div class="middle-container">
+    <div class="profile">
+      <img src="https://media3.giphy.com/media/KZT2Pt9gWbHuf9jsUd/200w.webp" alt="">
+      <h2>Hello.</h2>
+      <p class="head">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img  class="ale" src="https://media4.giphy.com/media/OfPYKE9M2OGx76DTop/200w.webp" alt="">
+        <h3>Lorem & Ipsum</h3>
+        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      </div>
+      <div class="skill-row">
+        <img class="chill" src="https://media1.giphy.com/media/ObE9aetaRbC2bWXKUI/200w.webp" alt="">
+        <h3>Lorem Ipsum Dolor</h3>
+        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+      <p style="font-weight: bold;margin-bottom: 30px;">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      </form>
+    </div>
+  </div>
 
-  <hr />
 
-  <a href="contact.html" target="_blank">Contact Me</a>
-  <a href="Untitled.png" download>DOWNLOAD</a>
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p class="copy">© Shaurya sood.</p>
+  </div>
 
-</body>
+
+
 </body>
 
 </html>
